Fri May 17 09:02:02 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_source_transform): Don't generate _OBJECTS
	when no source files specified.  Test number.test.

	From Joerg-Martin Schwarz:
	* automake.in (seen_package, seen_version): New globals.
	(scan_configure): Look for PACKAGE= and VERSION=.

	* automake.in (handle_options): Recognize dist-zip.
	(handle_dist): Handle dist-zip.
	(handle_options): Use ' ', not \s+, with split.  Test
	backsl.test.
	(handle_source_transform): Likewise.
	(handle_lib_objects): Likewise.
	(handle_libraries): Likewise.
	(handle_texinfo): Likewise.
	(handle_man_pages): Likewise.
	(handle_subdirs): Likewise.
	(handle_gettext): Likewise.
	(handle_footer): Likewise.
	(handle_tests): Likewise.
	(scan_configure): Likewise.
	(am_install_var): Likewise.

	* Makefile.am (TAGS_DEPENDENCIES): New macro.

	* tags.am (tags-recursive): New target.
	(TAGS): Depend on it.

	* automake.in (handle_tags): Put tags-recursive on @phony.

	* tags-subd.am (TAGS): Depend on HEADERS, SOURCES,
	TAGS_DEPENDENCIES.
	* tags.am (TAGS): Depend on HEADERS, SOURCES, TAGS_DEPENDENCIES.

Thu May 16 09:21:48 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* remake.am (configure): Depend on $(CONFIGURE_DEPENDENCIES).

	* automake.in (scan_configure): Look for install-sh and
	mkinstalldirs here.
	(initialize_global_constants): Moved mdate-sh from
	common_sometimes to common_files.  Test mdate2.test.

Tue May 14 21:52:01 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (seen_maint_mode): New global.
	(scan_configure): Handle jm_MAINTAINER_MODE.
	(read_am_file): Handle seen_maint_mode.
	(file_contents_with_transform): Handle seen_maint_mode.
	(handle_source_transform): Changed interface, all callers.

	From Jim Meyering:
	* remake-hdr.am, remake-subd.am, remake.am, texi-version.am:
	Handle @MAINT@.
	* aclocal.m4 (jm_MAINTAINER_MODE): New macro.

	* automake.in (handle_configure): Check $config_aux_dir against