@@ -1887,7 +1887,6 @@ sub handle_tests
 {
     return if ! &variable_defined ('TESTS');
 
-    &push_dist_common (split (' ', $contents{'TESTS'}));
     push (@check, 'check-TESTS');
     push (@phony, 'check-TESTS');
     # FIXME use $(SHELL) here?  That is what Ulrich suggests.  Maybe a
@@ -2409,7 +2408,7 @@ sub initialize_global_constants
 	 "README", "THANKS", "TODO", "NEWS", "COPYING", "COPYING.LIB",
 	 "INSTALL", "ABOUT-NLS", "ChangeLog", "configure", "configure.in",
 	 "config.guess", "config.sub", "AUTHORS", "BACKLOG", "ABOUT-GNU",
-	 "libversion.in", "mdate-sh"
+	 "libversion.in", "mdate-sh", "mkinstalldirs", "install-sh"
 	 );
 
     # Commonly used files we auto-include, but only sometimes.
@@ -2417,7 +2416,7 @@ sub initialize_global_constants
 	(
 	 "version.texi", "aclocal.m4", "acconfig.h", "config.h.top",
 	 "config.h.bot", "stamp-h.in", "ansi2knr.c",
-	 "ansi2knr.1", 'stamp-vti', "mkinstalldirs", "install-sh"
+	 "ansi2knr.1", 'stamp-vti'
 	 );
 
     $USAGE = "\
