@@ -1,3 +1,7 @@
+Sat May 18 10:51:37 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* insh2.test: New file.
+
 Fri May 17 17:32:35 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* number.test: New file.
