@@ -1,3 +1,9 @@
+Sat May 18 10:57:40 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* automake.in (handle_tests): Don't push TESTS onto dist_common.
+	(initialize_global_constants): Put install-sh and mkinstalldirs
+	into @common_files.  Test insh2.test.
+
 Fri May 17 09:02:02 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* automake.in (handle_source_transform): Don't generate _OBJECTS
